Fix modified field badge on mobile layout

--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -1804,6 +1804,10 @@ li.breadcrumb-toggle-wrapper {
     box-sizing: border-box;
   }
 
+  & > .field .status-badge {
+    left: calc(var(--row-gap) - var(--padding));
+  }
+
   & > h2 {
     flex: 4 0 100%;
 
